+ css and reference

--- a/about-tyler.css
+++ b/about-tyler.css
@@ -1,8 +1,8 @@
-body 	{
-		background-color: black;
-		}
 
-h1 {
+body
+
+	{
+	background-color: white;
 	color: white;
 	margin-left: 20px;
 	max-width: 100px;
