--- a/about-tyler.css
+++ b/about-tyler.css
@@ -1,8 +1,7 @@
-
-body
-
+body.inverted
 	{
-	background-color: white;
+	filter: invert(100%);
+	background-color: black;
 	color: white;
 	margin-left: 20px;
 	max-width: 100px;
