--- a/about-tyler.css
+++ b/about-tyler.css
@@ -1,8 +1,8 @@
 body.inverted
 	{
 	filter: invert(100%);
-	background-color: black;
-	color: white;
+	background-color: white;
+	color: black;
 	margin-left: 20px;
 	max-width: 100px;
 	}
