--- a/about-tyler.css
+++ b/about-tyler.css
@@ -1,10 +1,12 @@
 body
 	{
-	background-color: white;
-	color: black;
+	background-color: black;
+	color: white;
 	margin-left: 20px;
 	max-width: 500px;
 }
  img {
+	 height: 50%;
+	 width: 50%;
 	 -webkit-filter: invert(1);
  }
