--- a/about-tyler.css
+++ b/about-tyler.css
@@ -5,6 +5,12 @@ body
 	margin-left: 20px;
 	max-width: 500px;
 }
+
+h1
+{
+	color: whitesmoke;
+	font-size: 200%;
+}
  img {
 	 height: 50%;
 	 width: 50%;
