--- a/about-tyler.css
+++ b/about-tyler.css
@@ -12,8 +12,8 @@ h1
 	font-size: 200%;
 }
  img {
-	 height: 50%;
-	 width: 50%;
 	 -webkit-filter: invert(1);
-	 float: right;
+	 margin-left: auto;
+	 margin-right: auto;
+	 width: 70%;
  }
