--- a/about-tyler.css
+++ b/about-tyler.css
@@ -13,7 +13,7 @@ h1
 }
  img {
 	 -webkit-filter: invert(1);
-	 margin-left: auto;
-	 margin-right: auto;
+	 margin-left: 200px;
+	 margin-right: 200px;
 	 width: 70%;
  }
