--- a/css/about-tyler.css
+++ b/css/about-tyler.css
@@ -16,4 +16,7 @@ h1
 	 margin-left: 90px;
 	 margin-right: 199px;
 	 width: 70%;
+	 border-width: 10px;
+	 border-style: solid;
+	 border-color: hotpink;
  }
